responsive added & folder structure

--- a/docs/projects/overview.mdx
+++ b/docs/projects/overview.mdx
@@ -1,10 +1,56 @@
-# Projects
+---
+title: Project Overview
+description: Overview of all my projects
+---
 
-This page contains an overview about all my personal projects 
-and links to dedicated project reports or more information.
+# Project Overview
 
-For more information see the list of related pages below.
+This page provides a brief summary of all my projects with links to their detailed documentation.
 
-import DocCardList from '@theme/DocCardList';
+---
 
-<DocCardList/>
+### Baby Tools Shop
+Containerized an e-commerce application for baby products, demonstrating scalable and isolated deployment.  
+[Read more](./baby-tools-shop)
+
+---
+
+### Conduit Containerization
+Focused on containerizing a web application to ensure reproducible, isolated, and secure execution.  
+[Read more](./conduit-containerization)
+
+---
+
+### Conduit Deploy
+Deployment setup for Conduit application, demonstrating automated CI/CD pipelines and deployment best practices.  
+[Read more](./conduit-deploy)
+
+---
+
+### Minecraft Server
+Setup and manage a Minecraft game server, including world configuration and optional mods, while learning server responsibilities.  
+[Read more](./minecraft-server)
+
+---
+
+### OWASP Juice Shop
+Explored security vulnerabilities in an intentionally insecure web app. Learned offensive security techniques to improve application security.  
+[Read more](./owasp-juice-shop)
+
+---
+
+### Truck Signs API
+Containerized a REST API to ensure reproducible and secure backend execution. Learned to configure and operate containerized services.  
+[Read more](./truck-signs-api)
+
+---
+
+### V-Server Setup
+Configured a virtual server environment to host applications efficiently and securely.  
+[Read more](./v-server-setup)
+
+---
+
+### WordPress Multi Container Setup
+Ran a containerized WordPress blog environment demonstrating reproducible and secure deployment with minimal manual setup.  
+[Read more](./wordpress-multi-container-setup)
