--- a/docs/projects/overview.mdx
+++ b/docs/projects/overview.mdx
@@ -1,4 +1,5 @@
 ---
+sidebar_position: 1
 title: Project Overview
 description: Overview of all my projects
 ---
@@ -11,46 +12,46 @@ This page provides a brief summary of all my projects with links to their detail
 
 ### Baby Tools Shop
 Containerized an e-commerce application for baby products, demonstrating scalable and isolated deployment.  
-[Read more](./baby-tools-shop)
+[Read more](./Baby_Tools_Shop.md)
 
 ---
 
 ### Conduit Containerization
 Focused on containerizing a web application to ensure reproducible, isolated, and secure execution.  
-[Read more](./conduit-containerization)
+[Read more](./Conduit_Containization.md)
 
 ---
 
 ### Conduit Deploy
 Deployment setup for Conduit application, demonstrating automated CI/CD pipelines and deployment best practices.  
-[Read more](./conduit-deploy)
+[Read more](./Conduit_Deploy.md)
 
 ---
 
 ### Minecraft Server
 Setup and manage a Minecraft game server, including world configuration and optional mods, while learning server responsibilities.  
-[Read more](./minecraft-server)
+[Read more](./Minecraft_Server.md)
 
 ---
 
 ### OWASP Juice Shop
 Explored security vulnerabilities in an intentionally insecure web app. Learned offensive security techniques to improve application security.  
-[Read more](./owasp-juice-shop)
+[Read more](./OWASP_Juice_Shop.md)
 
 ---
 
 ### Truck Signs API
 Containerized a REST API to ensure reproducible and secure backend execution. Learned to configure and operate containerized services.  
-[Read more](./truck-signs-api)
+[Read more](./Truck_Signs_API.md)
 
 ---
 
 ### V-Server Setup
 Configured a virtual server environment to host applications efficiently and securely.  
-[Read more](./v-server-setup)
+[Read more](./V_Server_Setup.md)
 
 ---
 
 ### WordPress Multi Container Setup
 Ran a containerized WordPress blog environment demonstrating reproducible and secure deployment with minimal manual setup.  
-[Read more](./wordpress-multi-container-setup)
+[Read more](./WordPress_Multi_Container_Setup.md)
